raffle-microservice/raffle-service/target/fabric8/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: raffle-service
  labels:
    app: raffle-service
    group: com.redhat.raffle
    provider: fabric8
    version: 0.0.1-SNAPSHOT
spec:
  template:
    spec:
      containers:
        - env:
            - name: VIRTUALLAYER_USERNAME
              valueFrom:
                 secretKeyRef:
                   name: virtuallayer-secret
                   key: username
            - name: VIRTUALLAYER_PASSWORD
              valueFrom:
                 secretKeyRef:
                   name: virtuallayer-secret
                   key: password
            - name: VDB_NAME
              value: "inventory"
            - name: JAVA_OPTIONS
              value: "-Dspring.profiles.active=openshift"
            - name: BOOKING_STATE_SERVICE_GET_URL
              value: "http://booking-state-service-hotelbooking.apps.46.4.112.21.xip.io/getbookingstate"
